@@ -1,29 +1,26 @@
 package uk.gov.di.ipv.core.library.domain;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static uk.gov.di.ipv.core.library.fixtures.TestFixtures.ADDRESS_JSON_1;
+import static uk.gov.di.ipv.core.library.fixtures.TestFixtures.ADDRESS_1;
 
 class SharedClaimsTest {
 
     @Test
-    void shouldBuildSharedAttributes() throws Exception {
-        List<NameParts> namePartsList = Arrays.asList(new NameParts("Paul", "GivenName"));
+    void shouldBuildSharedAttributes() {
+        List<NameParts> namePartsList = List.of(new NameParts("Paul", "GivenName"));
         Set<Name> nameSet = new HashSet<>();
         Name names = new Name(namePartsList);
         nameSet.add(names);
 
         Set<Address> addressSet = new HashSet<>();
-        addressSet.add(new ObjectMapper().readValue(ADDRESS_JSON_1, Address.class));
+        addressSet.add(ADDRESS_1);
 
         Set<BirthDate> birthDaySet = new HashSet<>();
         BirthDate birthDate = new BirthDate("2020-02-03");
@@ -49,14 +46,14 @@ class SharedClaimsTest {
     }
 
     @Test
-    void shouldOverrideAddressAttributes() throws JsonProcessingException {
-        List<NameParts> namePartsList = Arrays.asList(new NameParts("Paul", "GivenName"));
+    void shouldOverrideAddressAttributes() {
+        List<NameParts> namePartsList = List.of(new NameParts("Paul", "GivenName"));
         Set<Name> nameSet = new HashSet<>();
         Name names = new Name(namePartsList);
         nameSet.add(names);
 
         Set<Address> addressSet = new HashSet<>();
-        addressSet.add(new ObjectMapper().readValue(ADDRESS_JSON_1, Address.class));
+        addressSet.add(ADDRESS_1);
 
         Set<BirthDate> birthDaySet = new HashSet<>();
         BirthDate birthDate = new BirthDate("2020-02-03");
